--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/underworldcode/{{ name|lower }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 6e40a36527757f99c5f1bb1220109c8e42281b274fef7fac6da1a8e8d240d67b
+  sha256: 6ab88cf9e82430ab285690436612fb116ee4018a4d75f6f62be1b374627437f2
 
 build:
   number: 1
@@ -46,7 +46,7 @@ about:
   license_family: GPL
   license_file: COPYING.LESSER
   summary: Python interface to TRIPACK and STRIPACK fortran code for triangulation/interpolation in Cartesian coordinates and on a sphere
-  doc_url: https://underworldcode.github.io/stripy/2.0.5b2
+  doc_url: https://underworldcode.github.io/stripy/2.1.1
   dev_url: https://github.com/underworldcode/stripy
 
 extra:
