--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,12 +10,14 @@ source:
   sha256: 956aa9bea6b71326185e66cbf094d1e422b8a5e899836fc68c07e26e9377fd6e
 
 build:
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
 
   build:
+    - python
+    - cross-python_{{ target_platform }}
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
 
