--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,16 @@
 {% set name = "stripy" %}
+{% set version = "2.3.3" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/stripy-{{ version }}.tar.gz
+  sha256: afc10284f77f901b00fbee4538e1c6541ae4be1db690e474a7bf9249aecc76b2
 
 build:
+  number: 3
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
@@ -15,12 +19,16 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
+    - meson-python
+    - ninja
     - {{ compiler('fortran') }}
 
   host:
     - python
     - pip
     - numpy
+    - meson-python
+    - ninja
 
   run:
     - python
