--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,15 @@ source:
   sha256: 956aa9bea6b71326185e66cbf094d1e422b8a5e899836fc68c07e26e9377fd6e
 
 build:
-  number: 5
-  script: {{ PYTHON }} -m pip install . -vv
+  number: 0
+  script:
+    # Cross-compilation stuff vendored from numpy-feedstock
+    # necessary for cross-compilation to point to the right env
+    - export PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig                                    # [build_platform != target_platform]
+    - echo "python = '${PREFIX}/bin/python'" >> ${CONDA_PREFIX}/meson_cross_file.txt  # [build_platform != target_platform]
+    - MESON_ARGS_REDUCED="$(echo $MESON_ARGS | sed 's/--buildtype release //g')"  # [unix]
+    - {{ PYTHON }} -m pip install -vv --no-deps --ignore-installed . -Csetup-args=${MESON_ARGS_REDUCED// / -Csetup-args=}  # [unix]
+    - {{ PYTHON }} -m pip install -vv --no-deps --ignore-installed .  # [not unix]
 
 requirements:
 
@@ -19,6 +26,8 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
+    - meson-python
+    - ninja
     - {{ compiler('fortran') }}
     - {{ stdlib("c") }}
 
@@ -26,6 +35,8 @@ requirements:
     - python
     - pip
     - numpy
+    - meson-python
+    - ninja
 
   run:
     - python
@@ -36,6 +47,7 @@ test:
   requires:
     - pytest
     - setuptools # for pkg_resources
+    - numpy
 
   source_files:
     - stripy/tests
